syntax = "proto3";

package fvp;

service Server {
    rpc Send(SendMsg) returns (EmptyMessage) {}
}

message SendMsg {
    message Slice {
        repeated string nodes = 1;
    }

    message State {
        string id = 1;
        repeated string votedFor = 2;
        repeated string accepted = 3;
        repeated string confirmed = 4;
        repeated Slice quorumSlices = 5;
        int32 counter = 6;
    }

    repeated State knownStates = 1;
    int32 term = 2;
}

message EmptyMessage {}
